Fix overlapping title

--- a/assets/stylesheets/universalcredit.scss
+++ b/assets/stylesheets/universalcredit.scss
@@ -164,6 +164,7 @@ a, a:visited, a:hover {
   }
   li[data-row="3"] {
     padding-top:40px;
+    margin-top: 30px;
   }
 }
 
